--- a/src/components/Dashboard/Dashboard.html
+++ b/src/components/Dashboard/Dashboard.html
@@ -1,9 +1,11 @@
 <div>
   <h3>Dashboard</h3>
   <ul>
-    <li>Form Validation</li>
-    <li>Date Picker</li>
-    <li>Draggable Sortable Grid</li>
+    <li>
+      <a href="{{ asr.makePath('app.formValidation') }}">
+        Form Validation
+      </a>
+    </li>
   </ul>
 
   <p>
@@ -11,7 +13,7 @@
       Load my child component
     </a>
   </p>
-  
+
   <uiView></uiView>
 </div>
 
