Adding sortable demo

--- a/src/components/Dashboard/Dashboard.html
+++ b/src/components/Dashboard/Dashboard.html
@@ -6,6 +6,11 @@
         Form Validation
       </a>
     </li>
+    <li>
+      <a href="{{ asr.makePath('app.sortable') }}">
+        Sortable
+      </a>
+    </li>
   </ul>
 
   <p>
