Adding base css Adding date picker demo

--- a/src/components/Dashboard/Dashboard.html
+++ b/src/components/Dashboard/Dashboard.html
@@ -11,6 +11,11 @@
         Sortable
       </a>
     </li>
+    <li>
+      <a href="{{ asr.makePath('app.datePicker') }}">
+        Date Picker
+      </a>
+    </li>
   </ul>
 
   <p>
