Adding logout link

--- a/src/components/App/App.html
+++ b/src/components/App/App.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Authenticated App</h2>
+  <h2>Authenticated App <small><a href="{{ asr.makePath('signIn') }}">Log out</a></small></h2>
   <uiView></uiView>
 </div>
 
