Adding autocomplete demo

--- a/src/components/Dashboard/Dashboard.html
+++ b/src/components/Dashboard/Dashboard.html
@@ -16,6 +16,11 @@
         Date Picker
       </a>
     </li>
+    <li>
+      <a href="{{ asr.makePath('app.autoComplete') }}">
+        Auto Complete
+      </a>
+    </li>
   </ul>
 
   <p>
